--- a/TestShop/Info.plist
+++ b/TestShop/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Mark-Pro.ttf</string>
+		<string>SF-Pro-Display-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
